--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 dj-database-url==0.5.0
 Django==4.0.6
+django-crispy-forms==1.14.0
 django-heroku==0.3.1
 gunicorn==20.1.0
 heroku==0.1.4
