--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ heroku==0.1.4
 idna==3.3
 psycopg2==2.9.3
 python-dateutil==1.5
+python-decouple==3.6
 requests==2.28.1
 sqlparse==0.4.2
 urllib3==1.26.10
